--- a/lags_robust.ipynb
+++ b/lags_robust.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.418\n",
       "Method:                 Least Squares   F-statistic:                     137.5\n",
       "Date:                Tue, 23 Jul 2019   Prob (F-statistic):               0.00\n",
-      "Time:                        16:24:43   Log-Likelihood:                 4311.9\n",
+      "Time:                        17:18:58   Log-Likelihood:                 4311.9\n",
       "No. Observations:                3613   AIC:                            -8584.\n",
       "Df Residuals:                    3593   BIC:                            -8460.\n",
       "Df Model:                          19                                         \n",
@@ -90,14 +90,6 @@
       "[2] The condition number is large, 1.22e+03. This might indicate that there are\n",
       "strong multicollinearity or other numerical problems.\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/erichschulman/anaconda3/lib/python3.7/site-packages/numpy/core/fromnumeric.py:2389: FutureWarning: Method .ptp is deprecated and will be removed in a future version. Use numpy.ptp instead.\n",
-      "  return ptp(axis=axis, out=out, **kwargs)\n"
-     ]
     }
    ],
    "source": [
@@ -121,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -130,62 +122,64 @@
      "text": [
       "                            OLS Regression Results                            \n",
       "==============================================================================\n",
-      "Dep. Variable:                 LSCORE   R-squared:                       0.448\n",
-      "Model:                            OLS   Adj. R-squared:                  0.443\n",
-      "Method:                 Least Squares   F-statistic:                     93.75\n",
+      "Dep. Variable:                 LSCORE   R-squared:                       0.450\n",
+      "Model:                            OLS   Adj. R-squared:                  0.445\n",
+      "Method:                 Least Squares   F-statistic:                     88.21\n",
       "Date:                Tue, 23 Jul 2019   Prob (F-statistic):               0.00\n",
-      "Time:                        16:24:44   Log-Likelihood:                 3833.2\n",
-      "No. Observations:                3153   AIC:                            -7610.\n",
-      "Df Residuals:                    3125   BIC:                            -7441.\n",
-      "Df Model:                          27                                         \n",
+      "Time:                        17:18:58   Log-Likelihood:                 3841.1\n",
+      "No. Observations:                3153   AIC:                            -7622.\n",
+      "Df Residuals:                    3123   BIC:                            -7440.\n",
+      "Df Model:                          29                                         \n",
       "Covariance Type:            nonrobust                                         \n",
       "================================================================================\n",
       "                   coef    std err          t      P>|t|      [0.025      0.975]\n",
       "--------------------------------------------------------------------------------\n",
-      "const           -0.8985      0.105     -8.580      0.000      -1.104      -0.693\n",
-      "LFMO             0.3130      0.026     11.862      0.000       0.261       0.365\n",
-      "LGAS            -0.0164      0.005     -3.610      0.000      -0.025      -0.008\n",
-      "LPOPUL           0.0077      0.003      2.268      0.023       0.001       0.014\n",
-      "LQSCORE         -0.0135      0.004     -3.776      0.000      -0.020      -0.006\n",
-      "COOLER        9.766e-05      0.003      0.033      0.974      -0.006       0.006\n",
-      "ESC             -0.0202      0.003     -7.400      0.000      -0.026      -0.015\n",
-      "NUM              0.0038      0.001      2.696      0.007       0.001       0.007\n",
-      "3               -0.0307      0.004     -6.912      0.000      -0.039      -0.022\n",
-      "6               -0.0301      0.013     -2.373      0.018      -0.055      -0.005\n",
-      "7               -0.0105      0.014     -0.746      0.456      -0.038       0.017\n",
-      "9               -0.0124      0.004     -2.990      0.003      -0.020      -0.004\n",
-      "INC             -0.0408      0.003    -13.192      0.000      -0.047      -0.035\n",
-      "PAST_AUCT        0.1263      0.060      2.105      0.035       0.009       0.244\n",
-      "min*past         0.0540      0.033      1.641      0.101      -0.011       0.118\n",
-      "max*past         0.0197      0.034      0.581      0.562      -0.047       0.086\n",
-      "LSCORE_min1     -0.0777      0.023     -3.381      0.001      -0.123      -0.033\n",
-      "LSCORE_min2      0.0420      0.017      2.475      0.013       0.009       0.075\n",
-      "LSCORE_min3      0.0169      0.017      0.998      0.319      -0.016       0.050\n",
-      "LSCORE_min4      0.0212      0.017      1.252      0.211      -0.012       0.054\n",
-      "LSCORE_max1      0.0987      0.024      4.130      0.000       0.052       0.146\n",
-      "LSCORE_max2      0.0242      0.018      1.358      0.175      -0.011       0.059\n",
-      "LSCORE_max3      0.0368      0.017      2.129      0.033       0.003       0.071\n",
-      "LSCORE_max4      0.0454      0.017      2.745      0.006       0.013       0.078\n",
-      "LSCORE_miny1     0.4870      0.024     20.621      0.000       0.441       0.533\n",
-      "LSCORE_miny2     0.0290      0.024      1.208      0.227      -0.018       0.076\n",
-      "LSCORE_maxy1     0.1255      0.020      6.212      0.000       0.086       0.165\n",
-      "LSCORE_maxy2     0.0175      0.020      0.893      0.372      -0.021       0.056\n",
+      "const           -0.7853      0.109     -7.223      0.000      -0.998      -0.572\n",
+      "LFMO             0.3034      0.026     11.470      0.000       0.251       0.355\n",
+      "LGAS            -0.0170      0.005     -3.740      0.000      -0.026      -0.008\n",
+      "LPOPUL           0.0071      0.003      2.091      0.037       0.000       0.014\n",
+      "LQSCORE         -0.0130      0.004     -3.654      0.000      -0.020      -0.006\n",
+      "COOLER       -3.951e-05      0.003     -0.013      0.989      -0.006       0.006\n",
+      "ESC             -0.0200      0.003     -7.325      0.000      -0.025      -0.015\n",
+      "NUM              0.0033      0.001      2.377      0.018       0.001       0.006\n",
+      "3               -0.0314      0.004     -7.077      0.000      -0.040      -0.023\n",
+      "6               -0.0300      0.013     -2.366      0.018      -0.055      -0.005\n",
+      "7               -0.0125      0.014     -0.891      0.373      -0.040       0.015\n",
+      "9               -0.0127      0.004     -3.072      0.002      -0.021      -0.005\n",
+      "INC             -0.0411      0.003    -13.319      0.000      -0.047      -0.035\n",
+      "PAST_AUCT        0.1245      0.060      2.079      0.038       0.007       0.242\n",
+      "min*past         0.0558      0.033      1.699      0.089      -0.009       0.120\n",
+      "max*past         0.0170      0.034      0.502      0.616      -0.049       0.084\n",
+      "LSCORE_min1     -0.0795      0.023     -3.465      0.001      -0.124      -0.034\n",
+      "LSCORE_min2      0.0420      0.017      2.482      0.013       0.009       0.075\n",
+      "LSCORE_min3      0.0131      0.017      0.776      0.438      -0.020       0.046\n",
+      "LSCORE_min4      0.0152      0.017      0.895      0.371      -0.018       0.049\n",
+      "LSCORE_min5      0.0547      0.016      3.337      0.001       0.023       0.087\n",
+      "LSCORE_max1      0.0988      0.024      4.126      0.000       0.052       0.146\n",
+      "LSCORE_max2      0.0209      0.018      1.177      0.239      -0.014       0.056\n",
+      "LSCORE_max3      0.0384      0.017      2.216      0.027       0.004       0.072\n",
+      "LSCORE_max4      0.0462      0.017      2.755      0.006       0.013       0.079\n",
+      "LSCORE_max5      0.0022      0.018      0.123      0.902      -0.032       0.036\n",
+      "LSCORE_miny1     0.4815      0.024     20.372      0.000       0.435       0.528\n",
+      "LSCORE_miny2     0.0288      0.024      1.196      0.232      -0.018       0.076\n",
+      "LSCORE_maxy1     0.1278      0.020      6.334      0.000       0.088       0.167\n",
+      "LSCORE_maxy2     0.0230      0.020      1.169      0.243      -0.016       0.061\n",
       "==============================================================================\n",
-      "Omnibus:                      334.839   Durbin-Watson:                   1.541\n",
-      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):             2250.558\n",
-      "Skew:                           0.256   Prob(JB):                         0.00\n",
-      "Kurtosis:                       7.107   Cond. No.                     1.49e+03\n",
+      "Omnibus:                      332.041   Durbin-Watson:                   1.544\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):             2156.905\n",
+      "Skew:                           0.267   Prob(JB):                         0.00\n",
+      "Kurtosis:                       7.017   Cond. No.                     1.56e+03\n",
       "==============================================================================\n",
       "\n",
       "Warnings:\n",
       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
-      "[2] The condition number is large, 1.49e+03. This might indicate that there are\n",
+      "[2] The condition number is large, 1.56e+03. This might indicate that there are\n",
       "strong multicollinearity or other numerical problems.\n"
      ]
     }
    ],
    "source": [
-    "maxlag = 4\n",
+    "maxlag = 5\n",
     "limitedlag = [l+str(i) for l in ['LSCORE_min','LSCORE_max'] for i in range(1,1+maxlag)]\n",
     "\n",
     "maxlagy = 2\n",
@@ -205,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -214,34 +208,37 @@
      "text": [
       "                           fit1       se1         fit2       se2\n",
       "Obs.                3613.000000       NaN  3153.000000       NaN\n",
-      "$R^2$                  0.420985       NaN     0.447522       NaN\n",
-      "Raw milk               0.332459  0.026341     0.313006  0.028546\n",
-      "Gas                   -0.011480  0.003892    -0.016443  0.004323\n",
-      "Population             0.005950  0.003011     0.007713  0.003455\n",
-      "Quantity              -0.010643  0.003162    -0.013452  0.003665\n",
-      "Cooler                 0.004329  0.002744     0.000098  0.002892\n",
-      "Escalated             -0.020881  0.002531    -0.020230  0.002624\n",
-      "No. Bidders            0.004671  0.001280     0.003767  0.001327\n",
-      "Waco                  -0.031208  0.003895    -0.030693  0.004111\n",
-      "St. Angelo            -0.030572  0.010350    -0.030147  0.011246\n",
-      "Austin                -0.011543  0.021949    -0.010506  0.023996\n",
-      "San Antonio           -0.018338  0.004734    -0.012356  0.005035\n",
-      "Incumbency            -0.038969  0.002548    -0.040813  0.002692\n",
-      "Attendance             0.232933  0.057667     0.126318  0.057545\n",
-      "Min * Attendance       0.086683  0.033844     0.053977  0.034123\n",
-      "Max * Attendance       0.045557  0.033946     0.019734  0.033388\n",
-      "Min at auction t-1    -0.096835  0.023714    -0.077663  0.023308\n",
-      "Min at auction t-2          NaN       NaN     0.041971  0.017842\n",
-      "Min at auction t-3          NaN       NaN     0.016892  0.016370\n",
-      "Min at auction t-4          NaN       NaN     0.021191  0.019137\n",
-      "Max at auction t-1     0.111387  0.023689     0.098680  0.024209\n",
-      "Max at auction t-2          NaN       NaN     0.024182  0.018773\n",
-      "Max at auction t-3          NaN       NaN     0.036775  0.015567\n",
-      "Max at auction t-4          NaN       NaN     0.045362  0.016958\n",
-      "Min in year y-1        0.486726  0.022752     0.486990  0.030552\n",
-      "Min in year y-1             NaN       NaN     0.029041  0.028621\n",
-      "Max in year y-2        0.140915  0.022953     0.125543  0.025238\n",
-      "Max in year y-2             NaN       NaN     0.017533  0.020454\n"
+      "$R^2$                  0.420985       NaN     0.450288       NaN\n",
+      "(Intercept)           -1.391150  0.082387    -0.785259  0.108855\n",
+      "Raw milk               0.332459  0.026341     0.303353  0.028301\n",
+      "Gas                   -0.011480  0.003892    -0.017008  0.004327\n",
+      "Population             0.005950  0.003011     0.007109  0.003442\n",
+      "Quantity              -0.010643  0.003162    -0.013009  0.003633\n",
+      "Cooler                 0.004329  0.002744    -0.000040  0.002881\n",
+      "Escalated             -0.020881  0.002531    -0.019985  0.002619\n",
+      "No. Bidders            0.004671  0.001280     0.003331  0.001322\n",
+      "Waco                  -0.031208  0.003895    -0.031380  0.004141\n",
+      "St. Angelo            -0.030572  0.010350    -0.030001  0.011396\n",
+      "Austin                -0.011543  0.021949    -0.012534  0.024008\n",
+      "San Antonio           -0.018338  0.004734    -0.012676  0.005016\n",
+      "Incumbency            -0.038969  0.002548    -0.041142  0.002692\n",
+      "Attendance             0.232933  0.057667     0.124539  0.057355\n",
+      "Min * Attendance       0.086683  0.033844     0.055803  0.034015\n",
+      "Max * Attendance       0.045557  0.033946     0.017025  0.033527\n",
+      "Min at auction t-1    -0.096835  0.023714    -0.079463  0.023323\n",
+      "Min at auction t-2          NaN       NaN     0.042037  0.017718\n",
+      "Min at auction t-3          NaN       NaN     0.013144  0.016366\n",
+      "Min at auction t-4          NaN       NaN     0.015234  0.018809\n",
+      "Min at auction t-5          NaN       NaN     0.054744  0.017726\n",
+      "Max at auction t-1     0.111387  0.023689     0.098812  0.024515\n",
+      "Max at auction t-2          NaN       NaN     0.020941  0.018724\n",
+      "Max at auction t-3          NaN       NaN     0.038391  0.015444\n",
+      "Max at auction t-4          NaN       NaN     0.046169  0.016989\n",
+      "Max at auction t-5          NaN       NaN     0.002154  0.019069\n",
+      "Min in year y-1        0.486726  0.022752     0.481542  0.030658\n",
+      "Min in year y-1             NaN       NaN     0.028845  0.028700\n",
+      "Max in year y-2        0.140915  0.022953     0.127842  0.025297\n",
+      "Max in year y-2             NaN       NaN     0.022955  0.020365\n"
      ]
     },
     {
@@ -284,10 +281,12 @@
     "           'LSCORE_min2':'Min at auction t-2',\n",
     "           'LSCORE_min3':'Min at auction t-3',\n",
     "           'LSCORE_min4':'Min at auction t-4',\n",
+    "           'LSCORE_min5':'Min at auction t-5',\n",
     "           'LSCORE_max1':'Max at auction t-1',\n",
     "           'LSCORE_max2':'Max at auction t-2',\n",
     "           'LSCORE_max3':'Max at auction t-3',\n",
     "           'LSCORE_max4':'Max at auction t-4',\n",
+    "           'LSCORE_max5':'Max at auction t-5',\n",
     "           'LSCORE_miny1':'Min in year y-1',\n",
     "           'LSCORE_miny2':'Min in year y-1',\n",
     "           'LSCORE_maxy1':'Max in year y-2',\n",
@@ -295,7 +294,8 @@
     "\n",
     "\n",
     "#fix column names\n",
-    "df = df.reindex(index = ['Obs.','$R^2$'] + covariates + hist2)\n",
+    "\n",
+    "df = df.reindex(index = ['Obs.','$R^2$', 'const'] + covariates + hist2)\n",
     "df = df.rename(columns = {0:'fit1',1:'se1',2:'fit2',3:'se2'})\n",
     "df = df.rename(index = nice_cov)\n",
     "print(df)\n",
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,6 +313,13 @@
     "#nice_lags = ['Incumbency','Past auction', 'Min * Past Auction'] + nice_lags\n",
     "#nice_lagsy = [l+str(i) for l in ['Min in year t-', 'Max in year t-'] for i in range(1,1+maxlagy)]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
