--- a/data_clean.ipynb
+++ b/data_clean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,9 +48,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_126508/1613455405.py:31: FutureWarning: Dropping invalid columns in DataFrameGroupBy.min is deprecated. In a future version, a TypeError will be raised. Before calling .min, select only columns which should be valid for the function.\n",
+      "  min_lag = data.groupby(auct_key, as_index=False).min()\n",
+      "/tmp/ipykernel_126508/1613455405.py:37: FutureWarning: Dropping invalid columns in DataFrameGroupBy.max is deprecated. In a future version, a TypeError will be raised. Before calling .max, select only columns which should be valid for the function.\n",
+      "  max_lag = data.groupby(auct_key, as_index=False).max()\n",
+      "/tmp/ipykernel_126508/1613455405.py:52: FutureWarning: Dropping invalid columns in DataFrameGroupBy.min is deprecated. In a future version, a TypeError will be raised. Before calling .min, select only columns which should be valid for the function.\n",
+      "  year_min_lag = data.groupby(auct_key, as_index=False).min().sort_values(['SYSTEM','YEAR','MONTH','DAY'])\n",
+      "/tmp/ipykernel_126508/1613455405.py:58: FutureWarning: Dropping invalid columns in DataFrameGroupBy.max is deprecated. In a future version, a TypeError will be raised. Before calling .max, select only columns which should be valid for the function.\n",
+      "  year_max_lag = data.groupby(auct_key, as_index=False).max().sort_values(['SYSTEM','YEAR','MONTH','DAY'])\n"
+     ]
+    }
+   ],
    "source": [
     "#general house keeping\n",
     "data = data[ (data['YEAR']>=1980)]\n",
@@ -133,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -168,8 +183,8 @@
       "Dep. Variable:                 LSCORE   R-squared:                       0.163\n",
       "Model:                            OLS   Adj. R-squared:                  0.161\n",
       "Method:                 Least Squares   F-statistic:                     71.77\n",
-      "Date:                Thu, 25 Jul 2019   Prob (F-statistic):          1.08e-147\n",
-      "Time:                        16:23:50   Log-Likelihood:                 4127.0\n",
+      "Date:                Mon, 09 May 2022   Prob (F-statistic):          1.08e-147\n",
+      "Time:                        18:48:41   Log-Likelihood:                 4127.0\n",
       "No. Observations:                4056   AIC:                            -8230.\n",
       "Df Residuals:                    4044   BIC:                            -8154.\n",
       "Df Model:                          11                                         \n",
@@ -196,8 +211,16 @@
       "Kurtosis:                       5.823   Cond. No.                         970.\n",
       "==============================================================================\n",
       "\n",
-      "Warnings:\n",
+      "Notes:\n",
       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/erichschulman/anaconda3/lib/python3.9/site-packages/statsmodels/tsa/tsatools.py:142: FutureWarning: In a future version of pandas all arguments of concat except for the argument 'objs' will be keyword-only\n",
+      "  x = pd.concat(x[::order], 1)\n"
      ]
     }
    ],
@@ -210,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -222,8 +245,8 @@
       "Dep. Variable:                 LSCORE   R-squared:                       0.180\n",
       "Model:                            OLS   Adj. R-squared:                  0.178\n",
       "Method:                 Least Squares   F-statistic:                     74.05\n",
-      "Date:                Thu, 25 Jul 2019   Prob (F-statistic):          2.01e-164\n",
-      "Time:                        16:23:59   Log-Likelihood:                 4168.3\n",
+      "Date:                Mon, 09 May 2022   Prob (F-statistic):          2.01e-164\n",
+      "Time:                        18:48:41   Log-Likelihood:                 4168.3\n",
       "No. Observations:                4056   AIC:                            -8311.\n",
       "Df Residuals:                    4043   BIC:                            -8229.\n",
       "Df Model:                          12                                         \n",
@@ -251,8 +274,16 @@
       "Kurtosis:                       6.036   Cond. No.                         970.\n",
       "==============================================================================\n",
       "\n",
-      "Warnings:\n",
+      "Notes:\n",
       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/erichschulman/anaconda3/lib/python3.9/site-packages/statsmodels/tsa/tsatools.py:142: FutureWarning: In a future version of pandas all arguments of concat except for the argument 'objs' will be keyword-only\n",
+      "  x = pd.concat(x[::order], 1)\n"
      ]
     }
    ],
@@ -264,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -287,20 +318,6 @@
       "Austin         -0.089732  0.023023    -0.090389  0.022093\n",
       "San Antonio    -0.051186  0.005135    -0.053267  0.005111\n",
       "Incumbency           NaN       NaN    -0.029550  0.003050\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/erichschulman/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:3: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
-      "of pandas will change to not sort by default.\n",
-      "\n",
-      "To accept the future behavior, pass 'sort=False'.\n",
-      "\n",
-      "To retain the current behavior and silence the warning, pass 'sort=True'.\n",
-      "\n",
-      "  This is separate from the ipykernel package so we can avoid doing imports until\n"
      ]
     }
    ],
@@ -352,7 +369,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -366,7 +383,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
